--- a/BidWheels/Views/Register/Index.cshtml
+++ b/BidWheels/Views/Register/Index.cshtml
@@ -1,9 +1,27 @@
 ﻿@model RegisterModel
 
+<style>
+    .custom-form {
+        font-family: 'Comic Sans MS', cursive, sans-serif;
+    }
+
+    .custom-button {
+        background-color: green;
+        color: white;
+        text-align: center;
+        display: block;
+        width: 100%;
+        transition: background-color 0.3s ease;
+    }
+
+        .custom-button:hover {
+            background-color: darkgreen;
+        }
+</style>
+
 <div class="row">
-    <div class="col-lg-6 mx-auto rounded border p-3">
+    <div class="col-lg-6 mx-auto rounded border p-3 custom-form">
         <h2 class="text-center mb-3">Register</h2>
-        <hr />
         <div asp-validation-summary="ModelOnly" class="text-danger" role="alert"></div>
         <form asp-action="Index" asp-controller="Register" method="post" enctype="multipart/form-data">
             <div class="row mb-3">
@@ -48,7 +66,7 @@
                     <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                 </div>
             </div>
-            <button type="submit" class="btn btn-lg btn-primary">Register</button>
+            <button type="submit" class="btn btn-lg custom-button">Register</button>
         </form>
     </div>
 </div>
