--- a/BidWheels/Views/Shared/_Layout.cshtml
+++ b/BidWheels/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Transmission" asp-action="Index">Transmission</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Car</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
