--- a/BidWheels/Views/Shared/_Layout.cshtml
+++ b/BidWheels/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Car" asp-action="Index">Car</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Auction" asp-action="Index">Auction</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
