--- a/BidWheels/Views/Car/Edit.cshtml
+++ b/BidWheels/Views/Car/Edit.cshtml
@@ -10,6 +10,13 @@
 
 		<form method="post" enctype="multipart/form-data">
 			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label">Brand Id</label>
+				<div class="col-sm-8">
+					<select class="form-control" asp-for="BrandId" asp-items="ViewBag.BrandId"></select>
+					<span asp-validation-for="BrandId" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="row mb-3">
 				<label class="col-sm-4 col-form-label">Model</label>
 				<div class="col-sm-8">
 					<input class="form-control" asp-for="Model">
@@ -17,10 +24,17 @@
 				</div>
 			</div>
 			<div class="row mb-3">
-				<label class="col-sm-4 col-form-label">Brand Id</label>
+				<label class="col-sm-4 col-form-label">Year</label>
 				<div class="col-sm-8">
-					<select class="form-control" asp-for="BrandId" asp-items="ViewBag.BrandId"></select>
-					<span asp-validation-for="BrandId" class="text-danger"></span>
+					<input class="form-control" asp-for="Year">
+					<span asp-validation-for="Year" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label">Mileage</label>
+				<div class="col-sm-8">
+					<input class="form-control" asp-for="Mileage">
+					<span asp-validation-for="Mileage" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="row mb-3">
@@ -42,6 +56,13 @@
 				<div class="col-sm-8">
 					<select class="form-control" asp-for="ColorId" asp-items="ViewBag.ColorId"></select>
 					<span asp-validation-for="ColorId" class="text-danger"></span>
+				</div>
+			</div>
+			<div class="row mb-3">
+				<label class="col-sm-4 col-form-label">Description</label>
+				<div class="col-sm-8">
+					<input class="form-control" asp-for="Description">
+					<span asp-validation-for="Description" class="text-danger"></span>
 				</div>
 			</div>
 			<div class="row mb-3">
