--- a/BidWheels/Views/Shared/_Layout.cshtml
+++ b/BidWheels/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Auction" asp-action="Index">Auctions</a>
                         </li>
-                        @if (User.IsInRole("Admin"))
+                        @if (User.IsInRole("admin"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Brand" asp-action="Index">Brands</a>
