--- a/BidWheels/Views/Auction/Index.cshtml
+++ b/BidWheels/Views/Auction/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Auctions";
 }
 
-<h1>Auctions</h1>
+<h2 class="text-center mb-5">Auctions</h2>
 @if (User.IsInRole("admin"))
 {
     <p>
@@ -46,12 +46,12 @@
                 <td>
                     @if (User.IsInRole("admin"))
                     {
-                        <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+                        <a class="btn btn-primary btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
                     }
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                    <a class="btn btn-primary btn-sm" asp-action="Details" asp-route-id="@item.Id">Details</a>
                     @if (User.IsInRole("admin"))
                     {
-                        <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                        <a class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
                     }
                 </td>
             </tr>
