--- a/BidWheels/Views/Car/Create.cshtml
+++ b/BidWheels/Views/Car/Create.cshtml
@@ -6,7 +6,7 @@
 
 <div class="row">
 	<div class="col-md-8 mx-auto rounded border p-3">
-		<h2 class="text-center mb-5">Add Book</h2>
+		<h2 class="text-center mb-5">Add Car</h2>
 
 		<form method="post" enctype="multipart/form-data">
 			<div class="row mb-3">
