--- a/BidWheels/Views/Register/Index.cshtml
+++ b/BidWheels/Views/Register/Index.cshtml
@@ -6,7 +6,7 @@
     }
 
     .custom-button {
-        background-color: green;
+        background-color: blue;
         color: white;
         text-align: center;
         display: block;
@@ -15,7 +15,7 @@
     }
 
         .custom-button:hover {
-            background-color: darkgreen;
+            background-color: darkblue;
         }
 </style>
 
