--- a/BidWheels/Views/Home/Privacy.cshtml
+++ b/BidWheels/Views/Home/Privacy.cshtml
@@ -3,4 +3,9 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p></p>
+<p>After winning a car you will be called by the phone number attached to your account.</p>
+<p>You will retrieve the car from the CDC Bid Wheels SRL headquarters at the address written below.</p>
+<p>Calea Bucuresti nr. 1, Craiova, Dolj, Romania</p>
+<p>CDC Bid Wheels SRL</p>
+<p>Phone number: 0712345678</p>
+<p>E-mail: cdc@bidwheels.ro</p>
